Some changes to better send responses to client , DTO changes
